--- a/hostSrc/SerialCommunication.ipynb
+++ b/hostSrc/SerialCommunication.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7.2 (default, Dec 29 2018, 06:19:36) \n",
+      "[GCC 7.3.0]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.version)\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,19 +77,19 @@
     "        \n",
     "        self.rawServoValueWidgets = [\n",
     "            widgets.IntSlider(value = self.servoListRaw[0],\n",
-    "                              min = 46, max = 122, step = 1, \n",
+    "                              min = self.servoMin[0], max = self.servoMax[0], step = 1, \n",
     "                              description = \"Right Servo Raw\",\n",
     "                              continuous_update=False, style=style),\n",
     "            widgets.IntSlider(value = self.servoListRaw[1],\n",
-    "                              min = 46, max = 98, step = 1, \n",
+    "                              min = self.servoMin[1], max = self.servoMax[1], step = 1, \n",
     "                              description = \"Left Servo Raw\",\n",
     "                              continuous_update=False, style=style),\n",
     "            widgets.IntSlider(value = self.servoListRaw[2],\n",
-    "                              min = 41, max = 123, step = 1, \n",
+    "                              min = self.servoMin[2], max = self.servoMax[2], step = 1, \n",
     "                              description = \"Base Servo Raw\",\n",
     "                              continuous_update=False, style=style),\n",
     "            widgets.IntSlider(value = self.servoListRaw[3],\n",
-    "                              min = 47, max = 125, step = 1, \n",
+    "                              min = self.servoMin[3], max = self.servoMax[3], step = 1, \n",
     "                              description = \"Gripper Servo Raw\",\n",
     "                              continuous_update=False, style=style)\n",
     "        ]\n",
@@ -129,7 +138,7 @@
     "        \n",
     "    def linearMap (self, Xmax,Xmin, Ymax,Ymin):\n",
     "        slope = (Ymax - Ymin) / (Xmax - Xmin)\n",
-    "        b = Ymin = slope * Xmin\n",
+    "        b = Ymin - slope * Xmin\n",
     "        return slope, b\n",
     "\n",
     "    def degToServo(self, deg, servoIdx):\n",
@@ -164,11 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "814c343d4d994a08ab04ba7ca012451e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Right Servo Degs', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "controller = armController()"
    ]
