--- a/hostSrc/SerialCommunication.ipynb
+++ b/hostSrc/SerialCommunication.ipynb
@@ -111,13 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "821cf76c968248368df7cde23e7ff88e",
+       "model_id": "19b9655082fe45bcaf09b653be1d8ae5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -311,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b9418976b264bb9a0382b52c3e9bd2d",
+       "model_id": "e29a217650534a5c84f606e31c8b642f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
