--- a/hostSrc/prototype.ipynb
+++ b/hostSrc/prototype.ipynb
@@ -72,8 +72,7 @@
    "source": [
     "opWrapper = op.WrapperPython()\n",
     "opWrapper.configure(params)\n",
-    "opWrapper.start()\n",
-    "datum = op.Datum()"
+    "opWrapper.start()"
    ]
   },
   {
@@ -106,11 +105,13 @@
     "            print(deg1-90, deg2)\n",
     "    \n",
     "def processImage(img):\n",
-    "    global datum, opWrapper\n",
+    "    global opWrapper\n",
+    "    datum = op.Datum()\n",
     "    datum.cvInputData = img\n",
     "    opWrapper.waitAndEmplace([datum])\n",
     "    if opWrapper.waitAndPop([datum]):\n",
-    "        pointsToDegrees(datum)"
+    "        pointsToDegrees(datum)\n",
+    "        return datum"
    ]
   },
   {
@@ -160,8 +161,8 @@
    "outputs": [],
    "source": [
     "plotOpenCVImage(frame)\n",
-    "processImage(frame)\n",
-    "plotOpenCVImage(datum.cvOutputData)\n"
+    "d = processImage(frame)\n",
+    "plotOpenCVImage(d.cvOutputData)\n"
    ]
   },
   {
@@ -170,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datum.handKeypoints"
+    "d.handKeypoints"
    ]
   },
   {
@@ -179,8 +180,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datum.handKeypoints[1].size"
+    "d.handKeypoints[1].size"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot hand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hand = 1\n",
+    "s = 0\n",
+    "points = d.handKeypoints[hand][0,:,:].squeeze()\n",
+    "points[:,1] = d.cvOutputData.shape[1] - points[:,1]\n",
+    "plt.plot(points[s:,0],points[s:,1], '-*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BaseIdx = 5\n",
+    "midIdx = 6\n",
+    "tipIdx = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalizeAngle(deg):\n",
+    "    while(deg > 180):\n",
+    "        deg = deg - 360\n",
+    "    while (deg < -180):\n",
+    "        deg = deg + 360\n",
+    "    return deg\n",
+    "\n",
+    "def pointsToDegreesRight(datum):\n",
+    "    BaseIdx = 5\n",
+    "    midIdx = 6\n",
+    "    tipIdx = 8\n",
+    "    hand = 1\n",
+    "    if datum.handKeypoints[hand].size != 1 :\n",
+    "        points = datum.handKeypoints[hand][0,:,:].squeeze()\n",
+    "        all_zeros = not np.any(points)\n",
+    "        if not all_zeros:\n",
+    "            points[:,1] = datum.cvOutputData.shape[1] - points[:,1]\n",
+    "            dy = points[midIdx, 1] - points[BaseIdx, 1]\n",
+    "            dx = points[midIdx, 0] - points[BaseIdx, 0]\n",
+    "            deg1 = math.degrees(math.atan2(dy, dx))\n",
+    "            dy = points[tipIdx, 1] - points[midIdx, 1]\n",
+    "            dx = points[tipIdx, 0] - points[midIdx, 0]\n",
+    "            deg2 = math.degrees(math.atan2(dy, dx))\n",
+    "            print(normalizeAngle(deg1 - 90), normalizeAngle(180 - deg2)) \n",
+    "pointsToDegreesRight(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from matplotlib import pyplot as plt\n",
+    "r = 10000\n",
+    "xs = [float (i - r/2.0)/100  for i in range(r)]\n",
+    "ys = [math.atan(x) for x in xs]\n",
+    "plt.plot(xs, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
